# fiber-kit

./: CHANGELOG.md  LICENSE  PKG-INFO  README.md  fiber-pipeline.yaml  pyproject.toml  pyproject.toml~  run_fiber_pipeline.sh  setup.cfg
doc/linking/: hybrid_linker_prototype.py
docs/: config.md  index.md  methods.md  pipeline.md  stages.md
plans/: 00-prep.yaml  01-baseline.yaml  02-merge-aggressive.yaml  03-split-conservative.yaml  04-chunk-fine.yaml  05-chunk-coarse.yaml  06-link-cfiber.yaml  07-curated-refit.yaml  08-backbone-link.yaml  09-backbone-xcorr.yaml  README.md  TEMPLATE-all-stages.yaml  diagnose.sh
scripts/: fiber-pipeline  fiber-pipeline-editor  run_fiber_pipeline
src/fiber_kit/: WORKFLOW.md  WORKFLOW_fiber_kit.md  __init__.py  backend.py  config.py  fiber-kit-exp.yaml  fiber-kit.yaml  fiber_adapt.py  fiber_backbone_link.py  fiber_branch.py  fiber_calibrate.py  fiber_ccg.py  fiber_cfiber.py  fiber_chan_svd.py  fiber_collision.py  fiber_contam.py  fiber_cpos.py  fiber_defrag.py  fiber_drift.py  fiber_geometry.py  fiber_intrachunk.py  fiber_lib.py  fiber_link.py  fiber_localize.py  fiber_merge.py  fiber_methods.py  fiber_microfiberize.py  fiber_pca.py  fiber_peel.py  fiber_pipeline_editor.py  fiber_position.py  fiber_provenance.py  fiber_qc.py  fiber_realign.py  fiber_refiber.py  fiber_refiberize.py  fiber_refine.py  fiber_refit.py  fiber_reject.py  fiber_relink.py  (+20 more)
test/: custody_vectors.tsv  pca_method_vectors.tsv  run_all.py  test_chan_svd.py  test_custody_token_conformance.py  test_merge_warp_resid_dual.py  test_pca_method_conformance.py  test_session_cfg.py  test_shared_contract.py  test_stage_startup.py  verify_optimizations.py
tools/: align_ablation.py  chain_consensus.py  ci_overlap_chain.py  drift_refine.py  fiber_graph_experiment.py  gen_stages_doc.py  gt_chain_invariant.py  gt_discrim.py  hier_diag.py  interneuron_drift.py  piece_interneurons.py  stage_probe.py
