[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiber-kit"
version = "0.25.0"
description = "Drift-stable 'fiber' reorganization of spike sorts (neurosuite-3)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gravio" }]
keywords = ["electrophysiology", "spike-sorting", "neurosuite", "klustakwik", "drift"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pyyaml>=5.3",
]

[project.optional-dependencies]
dip = ["diptest>=0.5"]            # enables DipSplit (bimodal cluster splitting)
viz = ["matplotlib>=3.5", "pyqtgraph>=0.13", "PySide6>=6.4"]  # fiber-view (figures) + fiber-view-gui (rotatable)
gpu = ["cupy-cuda12x>=12.0"]      # optional GPU acceleration of realign/whiten kernels

[project.scripts]
fiber-session = "fiber_kit.fiber_session:main"
fiber-raw-vs-stderiv = "fiber_kit.raw_vs_stderiv:main"
fiber-validate-merges = "fiber_kit.validate_merge_candidates:main"
fiber-relink = "fiber_kit.fiber_relink:main"
fiber-realign = "fiber_kit.fiber_realign:main"
fiber-localize = "fiber_kit.fiber_localize:main"
fiber-cpos = "fiber_kit.fiber_cpos:main"
fiber-link = "fiber_kit.fiber_link:main"
fiber-intrachunk = "fiber_kit.fiber_intrachunk:main"
fiber-drift = "fiber_kit.fiber_drift:main"
fiber-position = "fiber_kit.fiber_position:main"
fiber-refine = "fiber_kit.fiber_refine:main"
fiber-stats = "fiber_kit.fiber_stats:main"
fiber-view = "fiber_kit.fiber_view:main"
fiber-view-gui = "fiber_kit.fiber_view_gui:main"
fiber-view-tour = "fiber_kit.fiber_view:tour_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fiber_kit = ["WORKFLOW.md"]
