[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiber-kit"
version = "0.27.0"
description = "Drift-stable 'fiber' reorganization of spike sorts (neurosuite-3)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gravio" }]
keywords = ["electrophysiology", "spike-sorting", "neurosuite", "klustakwik", "drift"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pyyaml>=5.3",
]

[project.optional-dependencies]
dip = ["diptest>=0.5"]            # enables DipSplit (bimodal cluster splitting)
viz = ["matplotlib>=3.5", "pyqtgraph>=0.13", "PySide6>=6.4"]  # fiber-view (figures) + fiber-view-gui (rotatable)
qc = ["holoviews>=1.18", "bokeh>=3.3"]  # fiber-qc interactive report
editor = ["PySide6>=6.8", "pyyaml"]  # fiber-plan-edit (node-graph pipeline plan editor; needs Qt >= 6.8)
gpu = ["cupy-cuda12x>=12.0"]      # optional GPU acceleration of realign/whiten kernels

[project.scripts]
fiber-session = "fiber_kit.fiber_session:main"
fiber-raw-vs-stderiv = "fiber_kit.raw_vs_stderiv:main"
fiber-validate-merges = "fiber_kit.validate_merge_candidates:main"
fiber-relink = "fiber_kit.fiber_relink:main"
fiber-realign = "fiber_kit.fiber_realign:main"
fiber-localize = "fiber_kit.fiber_localize:main"
fiber-cpos = "fiber_kit.fiber_cpos:main"
fiber-link = "fiber_kit.fiber_link:main"
fiber-cfiber = "fiber_kit.fiber_cfiber:main"
fiber-intrachunk = "fiber_kit.fiber_intrachunk:main"
fiber-pca = "fiber_kit.fiber_pca:main"
fiber-branch = "fiber_kit.fiber_branch:main"
fiber-drift = "fiber_kit.fiber_drift:main"
fiber-position = "fiber_kit.fiber_position:main"
fiber-refine = "fiber_kit.fiber_refine:main"
fiber-peel = "fiber_kit.fiber_peel:main"
fiber-reject = "fiber_kit.fiber_reject:main"
fiber-stats = "fiber_kit.fiber_stats:main"
fiber-contam = "fiber_kit.fiber_contam:main"
fiber-defrag = "fiber_kit.fiber_defrag:main"
fiber-calibrate = "fiber_kit.fiber_calibrate:main"
fiber-score = "fiber_kit.fiber_score:main"
fiber-ccg = "fiber_kit.fiber_ccg:main"
fiber-refit = "fiber_kit.fiber_refit:main"
fiber-qc = "fiber_kit.fiber_qc:main"
fiber-plan-lint = "fiber_kit.fiber_pipeline_editor:lint_main"
fiber-view = "fiber_kit.fiber_view:main"
fiber-view-gui = "fiber_kit.fiber_view_gui:main"
fiber-view-tour = "fiber_kit.fiber_view:tour_main"
fiber-plan-edit = "fiber_kit.fiber_pipeline_editor:main"
fiber-kit-init = "fiber_kit.init_config:main"
ndm_fiber-kit = "fiber_kit.ndm_fiber_kit:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fiber_kit = ["WORKFLOW.md", "fiber-kit.yaml"]

[tool.ruff]
line-length = 110
target-version = "py39"

# House style is deliberately terse and uses scientific names; lint selects the rule
# classes that catch real defects (pyflakes F, bugbear B, comprehension/perf/simplify)
# and skips the ones that would only flag the intentional style.  pep8-naming (N) is
# not selected: matrices/amplitudes use capitals (A, W, X, Vt) by convention.
[tool.ruff.lint]
select = ["F", "E", "W", "B", "C4", "SIM", "RET", "PIE"]
ignore = [
    "E701",  # multiple statements on one line (colon) — terse house style
    "E702",  # multiple statements on one line (semicolon) — terse house style
    "E741",  # ambiguous single-char names (l, A, …) — scientific convention
]
